# airbnb-clone-backend

./: .gitignore  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  urls.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py  0002_photo_category.py  0003_remove_photo_category.py  0004_alter_photo_experience_alter_photo_room_and_more.py  0005_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_rename_text_review_payload.py  0003_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+1 more)
wishlists/: models.py  serializers.py  urls.py  views.py
(+2 files in other folders)
